# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.461 2007-09-03 22:34:09 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

2.2.3 (2007/??/??)
 - (2007/09/03) Fixed bug# 2193 - Postmaster module
    Kernel::System::PostMaster::Filter::NewTicketReject is not working - need
    Charset!
 - (2007/09/03) Fixed bug# 2245 - Responsible / Owner Field not working for
    all users in the Email-Ticket form.
 - (2007/09/03) Improved system speed of escalation calculation if many open
    ticket (> 2000) are there.
 - (2007/08/28) Fixed Ticket# 2007082842000477 - Problem with different customer
    sources and use CacheTTL option (namespace of cache is not uniq).
 - (2007/08/28) Fixed Ticket# 2007082842000413 - Ticket created over phone
    ticket with state closed is shown in queue view like "My Queues (1)" but
    no ticket is shown if I click on "My Queues (1)" (if
    Kernel::System::Ticket::IndexAccelerator::StaticDB is used as
    Ticket::IndexModule).
 - (2007/08/27) Fixed bug# 2230 - OTRS on IIS - redirect/loop problem after
    login.
 - (2007/08/27) Fixed bug# 2229 - Return value of "ServiceLookup" is used
    without quoting in SQL statements.
 - (2007/08/24) Fixed bug# 2207 - translation failure in customer preferences
    (QueueView refresh time).
 - (2007/08/24) Fixed bug# 2214 - .opm Package can not handle &lt;, &gt; and
    &amp; in .sopm files.
 - (2007/08/22) Improved Agent Notifications. Salutation of notfication
    recipient is now using <OTRS_UserFirstname> and <OTRS_UserLastname> instead
    of <OTRS_OWNER_UserFirstname> or <OTRS_OWNER_UserLastname>.
 - (2007/08/22) Fixed bug# 2203 - OTRS will not create/verify correct pgp
    signs if utf8 is used.